Continue switching to absolute links

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author      : aurelitec
 twitter:
   username  : aurelitec
 
-baseurl: "http://www.aurelitec.com/"
+baseurl: "http://www.aurelitec.com"
 
 collections:
   - reviews
