Add Thumbico review

--- a/_data/reviews/thumbico.yaml
+++ b/_data/reviews/thumbico.yaml
@@ -1,3 +1,10 @@
+- by: TechwareGuide
+  link: http://www.techwareguide.com/extract-thumbnail-desktop-shortcuts-exe-as-jpg-png-images-thumbico/
+  date: 2017-07-08
+  platform: windows
+  app: Thumbico
+  content: "<q>I really like this thumbnail extractor software. It is user friendly and extracting thumbnails of desktop shortcuts, EXE files, or some other application is very simple.</q>"
+
 - by: BetaNews
   link: https://betanews.com/2017/06/22/extract-icons-and-create-image-thumbnails-with-thumbico/
   date: 2017-06-22
