Add InjuredPixels review

--- a/_data/reviews/injuredpixels.yml
+++ b/_data/reviews/injuredpixels.yml
@@ -1,3 +1,10 @@
+- by: FileCluster
+  link: https://www.filecluster.com/InjuredPixels.html
+  date: 2017-03-15
+  platform: windows
+  app: InjuredPixels
+  content: "<q>No one wants to purchase a new monitor only to find out it comes with dead or locked pixels straight out of the box. InjuredPixels is a small application designed to prevent this from ever happening.</q> (FileCluster 5 Stars Editors' Pick Award)"
+
 - by: Software Informer
   link: http://injuredpixels.software.informer.com/
   date: 2017-03-13
