Fix some InjuredPixels reviews with awards

--- a/_data/reviews/injuredpixels.yml
+++ b/_data/reviews/injuredpixels.yml
@@ -3,14 +3,14 @@
   date: 2017-03-15
   platform: windows
   app: InjuredPixels
-  content: "<q>No one wants to purchase a new monitor only to find out it comes with dead or locked pixels straight out of the box. InjuredPixels is a small application designed to prevent this from ever happening.</q> (FileCluster 5 Stars Editors' Pick Award)"
+  content: "<q>No one wants to purchase a new monitor only to find out it comes with dead or locked pixels straight out of the box. InjuredPixels is a small application designed to prevent this from ever happening.</q> <b>(FileCluster 5 Stars Editors' Pick Award)</b>"
 
 - by: Software Informer
   link: http://injuredpixels.software.informer.com/
   date: 2017-03-13
   platform: windows
   app: InjuredPixels
-  content: "<q>This open-source solution has no rival in the simplicity department. Software tools simply don't come any simpler than InjuredPixels.</q> (Software Informer Editor's Pick Award)"
+  content: "<q>This open-source solution has no rival in the simplicity department. Software tools simply don't come any simpler than InjuredPixels.</q> <b>(Software Informer Editor's Pick Award)</b>"
 
 - by: MajorGeeks
   link: http://www.majorgeeks.com/files/details/injuredpixels_for_android.html
