Add PixelHealer review

--- a/_data/reviews/pixelhealer.yaml
+++ b/_data/reviews/pixelhealer.yaml
@@ -40,6 +40,13 @@
   app: PixelHealer
   content: "<q>PixelHealer is a very simple and straightforward software and there is nothing in it that users have to do manually, apart from some settings.</q>"
 
+- by: Kim Komando
+  link: https://www.komando.com/tips/416926/quickest-way-to-fix-dead-pixels-on-your-monitor
+  date: 2017-09-05
+  platform: windows
+  app: PixelHealer
+  content: "<q>You can use PixelHealer's flashing color box on the affected areas to try and jolt the pixels back into shape. ... PixelHealer can be used instantly without the need for installation.</q>"
+
 - by: Omicrono
   link: http://www.omicrono.com/2016/01/reparar-pixeles-muertos/
   date: 2016-01-24
